# stm32_black_pill_bare_metal_template

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  config.h  constants.h  main.c  utils.h
app/bsp/: time.c  time.h  wdt.c  wdt.h
app/bsp/private/: time_private.h
app/business/: template.c  template.h
app/middleware/soft_timer/: soft_timer.c  soft_timer.h  soft_timer_private_config.h
app/system/: stm32f4xx_it.c  system.c  system.h
app/version/: version.c  version.h
cmake/: safeguards.cmake  toolchain.cmake  version.cmake
lib/: CMakeLists.txt
lib/cmsis/: CMakeLists.txt
lib/stm32f411ce/: CMakeLists.txt
lib/stm32f4_hal/: CMakeLists.txt
lib/tools_cm4_gcc/: CMakeLists.txt  assert.h  compiler.h  linkage.h
tools/stm32_cube_mx/: .gitignore  stm32_black_pill_bare_metal_template.ioc
